# qdisc

./: README.md  index.html  index.html.md  pyproject.toml  robots.txt  search.json  sitemap.xml
examples/: index_examples.html  index_examples.html.md  qdisc_clusterising.html  qdisc_clusterising.html.md  qdisc_fkm.html  qdisc_fkm.html.md  qdisc_rydberg.html  qdisc_rydberg.html.md
lib_nbs/: index_docs.html  index_docs.html.md
lib_nbs/clustering/: core.html  core.html.md
lib_nbs/dataset/: core.html  core.html.md
lib_nbs/nn/: core.html  core.html.md
lib_nbs/sr/: core.html  core.html.md
lib_nbs/vae/: core.html  core.html.md
nbs/: 00_core.ipynb  _quarto.yml  index.ipynb  nbdev.yml  sidebar.yml
nbs/examples/: clusterIsingN15_data_cpVAE2_QDisc.pkl  index_examples.ipynb  qdisc_ClusterIsing (2).ipynb  qdisc_ClusterIsing.ipynb  qdisc_FKM.ipynb  qdisc_Rydberg (2).ipynb  qdisc_Rydberg.ipynb
nbs/lib_nbs/: index_docs.ipynb
nbs/lib_nbs/clustering/: 01_core.ipynb
nbs/lib_nbs/dataset/: 01_core.ipynb
nbs/lib_nbs/nn/: 01_core.ipynb
nbs/lib_nbs/sr/: 01_core.ipynb
nbs/lib_nbs/vae/: 01_core.ipynb
nbs/tutorials/: J1J2_tuto.ipynb  J1J2_tuto1_VAE.ipynb  J1J2_tuto2_SR.ipynb
nbs/tutorials/outputs/20260220_115048_ZMm7mo/: checkpoint.pkl  hall_of_fame.csv
nbs/tutorials/outputs/20260220_142526_002vLS/: checkpoint.pkl  hall_of_fame.csv
nbs/tutorials/outputs/20260401_141130_KkCUyZ/: checkpoint.pkl
nbs/tutorials/outputs/20260401_141505_igarmw/: checkpoint.pkl  hall_of_fame.csv
qdisc/: _modidx.py  core.py
qdisc/clustering/: core.py
qdisc/dataset/: core.py
qdisc/nn/: core.py
qdisc/sr/: core.py
qdisc/vae/: core.py
site_libs/bootstrap/: bootstrap-7d0f2692033adbfcebf02552a4d09f1a.min.css
tutorials/: j1j2_tuto1_vae.html  j1j2_tuto1_vae.html.md  j1j2_tuto2_sr.html  j1j2_tuto2_sr.html.md
