[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "qdisc"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "PaulinDS", email = "paulinschou@gmail.com"}]
keywords = ['nbdev']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.urls]
Repository = "https://github.com/PaulinDS/qdisc"
Documentation = "https://PaulinDS.github.io/qdisc/"

[project.entry-points.nbdev]
qdisc = "qdisc._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "qdisc.__version__"}

[tool.setuptools.packages.find]
include = ["qdisc"]

[tool.nbdev]
