[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "qdisc"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "PaulinDS", email = "paulinschou@gmail.com"}]
keywords = ['nbdev']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
	"scipy>=1.17.0",
        "scikit-learn>=1.8.0,
	"jax>=0.4.38",
	"matplotlib",
	"netket>=3.15.2"
]

[project.optional-dependencies]
cuda12 = [
    "jax[cuda12]>=0.4.38"
]

cuda11 = [
    "jax[cuda11]>=0.4.38"
]


[project.urls]
Repository = "https://github.com/PaulinDS/qdisc"
Documentation = "https://PaulinDS.github.io/qdisc/"

[project.entry-points.nbdev]
qdisc = "qdisc._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "qdisc.__version__"}

[tool.setuptools.packages.find]
include = ["qdisc"]

[tool.nbdev]
